Fix(UI): Adjust spacing between footer and final section on 'About Me' page for tablet and web. Improved layout consistency.

--- a/pages/aboutMe/styles/aboutMeStyleTablet.css
+++ b/pages/aboutMe/styles/aboutMeStyleTablet.css
@@ -622,7 +622,7 @@ transform: perspective(1200px) translateX(0px) translateY(270.944px) scale(1) ro
     }
 
     #container7 {
-        height: 355vw;
+        height: 345vw;
         width: 100vw;
         display: flex;
         background-color: black;
